# pare

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TECHNICAL_BACKGROUND.md
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml
benches/: pareto.rs
examples/: README.md  sensitivity_analysis.rs
src/: lib.rs  sensitivity.rs
tests/: api_regression_tests.rs  eps_and_edge_tests.rs  frontier_proptests.rs  rosetta_pare.rs  sensitivity_proptests.rs  serde_tests.rs
tests/fixtures/rosetta/: gen_pare.py  pare_hypervolume.json
