[package]
name = "pare"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pareto frontier and skyline queries"
repository = "https://github.com/arclabs561/pare"
homepage = "https://github.com/arclabs561/pare"
documentation = "https://docs.rs/pare"
keywords = ["pareto", "frontier", "skyline"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
rand = "0.9"
rand_chacha = "0.9"
